cicd-demo.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ci-demo
  name: cicd-demo
spec:
  selector:
    matchLabels:
      app: cicd-demo
  replicas: 2
  template:
    metadata:
      labels:
        app: cicd-demo
    spec:
      containers:
        - name: cicd-demo
          image: peterlin005/ci-demo:ca945ef
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: docker
