cicd-demo.svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ci-demo
  name: cicd-demo
spec:
  selector:
    app: cicd-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
